--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <option value="https://i.imgur.com/2IA7MMP.png">Paisley Design ft SOL</option>
                 <option value="https://i.imgur.com/rT1olJI.png">Tech Design</option>
                 <option value="https://i.imgur.com/McFB24z.png">B&W Paisley</option>
-                <option value="https://imgur.com/Omlm1QF">Plain red</option>
+                <option value="https://i.imgur.com/pviKxaB.png">Plain red</option>
             </select>
             <label class="block text-sm font-medium text-cyan-300 mt-2 mb-1">Hue Adjustment</label>
             <div id="hueButtons" class="flex flex-row flex-wrap gap-2">
