--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
                 <option value="https://i.imgur.com/rT1olJI.png">Tech Design</option>
                 <option value="https://i.imgur.com/McFB24z.png">B&W Paisley</option>
                 <option value="https://i.imgur.com/pviKxaB.png">Plain red</option>
+                <option value="https://i.imgur.com/heMpITZ.png">Black Tupac Style</option>
+                <option value="https://i.imgur.com/kTMNdsx.png">White Tupac Style</option>
             </select>
             <label class="block text-sm font-medium text-cyan-300 mt-2 mb-1">Hue Adjustment</label>
             <div id="hueButtons" class="flex flex-row flex-wrap gap-2">
