--- a/index.html
+++ b/index.html
@@ -13,6 +13,57 @@
             font-family: 'Orbitron', sans-serif;
             overscroll-behavior: none;
             touch-action: manipulation;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            position: relative;
+        }
+        .title-container {
+            width: 100%;
+            text-align: center;
+            background: rgba(30, 30, 47, 0.8);
+            padding: 1rem 0;
+            margin-bottom: 20px;
+        }
+        .floating-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+            opacity: 0.2;
+        }
+        .floating-bandana, .floating-diamond {
+            position: absolute;
+            animation: float 20s linear infinite;
+            pointer-events: none;
+        }
+        .floating-bandana {
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(45deg, var(--color-start), var(--color-end));
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            transform: rotate(45deg);
+        }
+        .floating-diamond {
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(45deg, var(--diamond-color-start), var(--diamond-color-end));
+            clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+            transform: rotate(45deg);
+        }
+        @keyframes float {
+            0% { transform: translate(0, 0) rotate(0deg); }
+            25% { transform: translate(50vw, 50vh) rotate(90deg); }
+            50% { transform: translate(100vw, 0) rotate(180deg); }
+            75% { transform: translate(50vw, -50vh) rotate(270deg); }
+            100% { transform: translate(0, 0) rotate(360deg); }
+        }
+        @keyframes spawn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
         #canvas-container {
             position: relative;
@@ -22,6 +73,7 @@
             box-shadow: 0 0 20px rgba(0, 247, 255, 0.5);
             border-radius: 10px;
             overflow: hidden;
+            z-index: 1;
         }
         #imageCanvas { width: 100%; height: 100%; touch-action: none; }
         .hue-btn {
@@ -96,6 +148,7 @@
             border-radius: 8px;
             padding: 16px;
             border: 1px solid rgba(0, 247, 255, 0.3);
+            z-index: 1;
         }
         .larger-input {
             padding: 12px;
@@ -146,8 +199,22 @@
     </style>
 </head>
 <body class="flex flex-col items-center min-h-screen p-4">
-    <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-neon-pink to-cyan-400 mb-2 pulse-animation">Bandana Customizer</h1>
-    <p class="text-lg text-cyan-300 mb-6">Craft your futuristic bandana masterpiece!</p>
+    <div class="title-container">
+        <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-neon-pink to-cyan-400 pulse-animation">Bandana Customizer</h1>
+        <p class="text-lg text-cyan-300">Craft your futuristic bandana masterpiece!</p>
+    </div>
+
+    <div class="floating-container">
+        <!-- Dynamically generated floating elements -->
+        <div class="floating-bandana" style="--color-start: #ff0000; --color-end: #ff6666; left: 10%; top: 10%; animation-delay: 0s;"></div>
+        <div class="floating-bandana" style="--color-start: #00ff00; --color-end: #66ff66; left: 30%; top: 20%; animation-delay: 2s;"></div>
+        <div class="floating-bandana" style="--color-start: #0000ff; --color-end: #6666ff; left: 50%; top: 30%; animation-delay: 4s;"></div>
+        <div class="floating-bandana" style="--color-start: #ff00ff; --color-end: #ff66ff; left: 70%; top: 40%; animation-delay: 6s;"></div>
+        <div class="floating-diamond" style="--diamond-color-start: #ff007a; --diamond-color-end: #ff66b3; left: 20%; top: 50%; animation-delay: 1s;"></div>
+        <div class="floating-diamond" style="--diamond-color-start: #00ccff; --diamond-color-end: #66e6ff; left: 40%; top: 60%; animation-delay: 3s;"></div>
+        <div class="floating-diamond" style="--diamond-color-start: #ff9900; --diamond-color-end: #ffcc66; left: 60%; top: 70%; animation-delay: 5s;"></div>
+        <div class="floating-diamond" style="--diamond-color-start: #9900ff; --diamond-color-end: #cc66ff; left: 80%; top: 80%; animation-delay: 7s;"></div>
+    </div>
 
     <div id="canvas-container" class="bg-gray-900 shadow-2xl rounded-lg mb-6">
         <canvas id="imageCanvas"></canvas>
@@ -349,7 +416,6 @@
                     newWidth = newHeight * aspectRatio;
                 }
 
-                // Apply minimum scale for large images on mobile
                 const minScale = isMobile ? 0.5 : 0.3;
                 const scale = Math.max(minScale, Math.min(newWidth / originalCanvasWidth, newHeight / originalCanvasHeight));
 
@@ -446,7 +512,6 @@
                 reader.onload = function(event) {
                     const img = new Image();
                     img.onload = function() {
-                        // Cap image dimensions based on device
                         const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
                         const maxDimension = isMobile ? 600 : 1200;
                         let width = img.width;
@@ -723,22 +788,18 @@
         // Download with Watermark
         document.getElementById('downloadBtn').addEventListener('click', function() {
             try {
-                // Save current canvas state
                 const currentZoom = canvas.getZoom();
-                const currentWidth = canvas.width / currentZoom; // Current unzoomed width
-                const currentHeight = canvas.height / currentZoom; // Current unzoomed height
+                const currentWidth = canvas.width / currentZoom;
+                const currentHeight = canvas.height / currentZoom;
 
-                // Use original base image dimensions for export
                 const exportWidth = originalCanvasWidth;
                 const exportHeight = originalCanvasHeight;
 
-                // Adjust canvas for export to original ratio
                 canvas.setZoom(1);
                 canvas.setWidth(exportWidth);
                 canvas.setHeight(exportHeight);
-                canvas.setViewportTransform([1, 0, 0, 1, 0, 0]); // Reset to origin
+                canvas.setViewportTransform([1, 0, 0, 1, 0, 0]);
 
-                // Calculate scaling factor to fit content within original dimensions
                 const objects = canvas.getObjects();
                 let minX = Infinity, minY = Infinity, maxX = -Infinity, maxY = -Infinity;
                 objects.forEach(obj => {
@@ -752,9 +813,8 @@
                 const contentHeight = maxY - minY;
                 const scaleX = exportWidth / contentWidth;
                 const scaleY = exportHeight / contentHeight;
-                const scale = Math.min(scaleX, scaleY); // Scale to fit within original dimensions
+                const scale = Math.min(scaleX, scaleY);
 
-                // Apply scaling and reposition to center content
                 canvas.getObjects().forEach(obj => {
                     obj.set({
                         scaleX: obj.scaleX * scale,
@@ -765,10 +825,9 @@
                 });
                 canvas.renderAll();
 
-                // Create and add watermark
                 const watermark = new fabric.Text('bandana_Sol', {
                     fontSize: 16,
-                    fill: 'rgba(0, 247, 255, 0.7)', // Neon cyan, semi-transparent
+                    fill: 'rgba(0, 247, 255, 0.7)',
                     fontFamily: 'Orbitron',
                     selectable: false,
                     evented: false
@@ -776,21 +835,18 @@
                 canvas.add(watermark);
                 const textBounds = watermark.getBoundingRect();
                 watermark.set({
-                    left: exportWidth - textBounds.width - 10, // 10px margin from right
-                    top: exportHeight - textBounds.height - 10 // 10px margin from bottom
+                    left: exportWidth - textBounds.width - 10,
+                    top: exportHeight - textBounds.height - 10
                 });
 
-                // Force render to ensure watermark is included
                 canvas.renderAll();
 
-                // Generate and download image
                 const dataURL = canvas.toDataURL({ format: 'png', quality: 1 });
                 const link = document.createElement('a');
                 link.href = dataURL;
                 link.download = 'custom_bandana.png';
                 link.click();
 
-                // Restore original canvas state
                 canvas.remove(watermark);
                 canvas.getObjects().forEach(obj => {
                     obj.set({
